--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,7 @@
         Remember me
       </label>
     </div>
-    <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
+    <a href="/posts" class="btn btn-primary w-100 py-2" type="submit">Sign in</a>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2023</p>
   </form>
 </main>
