--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.112.5">
-    <title>Log in</title>
+    <title>Signin Template · Bootstrap v5.3</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
 
-    
 
-    
+
+
 
 <link href="/static/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
@@ -95,7 +95,7 @@
       }
     </style>
 
-    
+
     <!-- Custom styles for this template -->
     <link href="D:\Program Files (x86)\zadania python\fastAp__TiOK\static\css\signin.css" rel="stylesheet">
   </head>
@@ -151,7 +151,7 @@
       </ul>
     </div>
 
-    
+
 <main class="form-signin w-100 m-auto">
   <form>
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
